--- a/jupyter notes/backend_nb.ipynb
+++ b/jupyter notes/backend_nb.ipynb
@@ -3,121 +3,115 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": "[nltk_data] Downloading package stopwords to\n[nltk_data]     /home/royalcat/nltk_data...\n[nltk_data]   Package stopwords is already up-to-date!\n"
+    }
+   ],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from string import punctuation\n",
+    "import numpy as np\n",
+    "import multiprocessing\n",
+    "import tqdm\n",
+    "\n",
+    "import nltk\n",
+    "nltk.download(\"stopwords\")\n",
+    "from nltk.corpus import stopwords\n",
+    "russian_stopwords = stopwords.words(\"russian\")\n",
+    "\n",
+    "import rutermextract\n",
+    "term_extractor = rutermextract.TermExtractor()\n",
+    "\n",
+    "from pymystem3 import Mystem\n",
+    "mystem = Mystem() "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "questions_models = {\n",
+    "    \"Кладовщик\":{\n",
+    "        \"q1\": \"Желаемая должность\",\n",
+    "        \"q2\": \"У вас есть опыт работы кладовщиком?\",\n",
+    "        \"q2d\": \"У вас есть опыт работы кладовщиком? строка\",\n",
+    "        \"q3\": \"Укажите Ваш стаж работы кладовщиком\",\n",
+    "        \"q4\": \"Отрасль\",\n",
+    "        \"q5\": \"Названия компаний\",\n",
+    "        \"q6\": \"С какой системой хранения Вы имели опыт работы?\",\n",
+    "        \"q7\": \"Опыт работы с программами\",\n",
+    "        \"q8\": \"Опыт с инструментарием\",\n",
+    "        \"q9\": \"Типы работ\",\n",
+    "        \"q10\": \"Сколько времени вы потратили на поиск работы кладовщика?\",\n",
+    "        \"q11\": \"Уровень ЗП (желаемый)\"\n",
+    "    },\n",
+    "    \"Водитель погрузчика\":{\n",
+    "        \"q1\": \"Желаемая должность\",\n",
+    "        \"q2\": \"У вас есть водительские права?\",\n",
+    "        \"q3\": \"Водительское удостоверение\",\n",
+    "        \"q4\": \"Удостоверение тракториста-машиниста нового образца\",\n",
+    "        \"q5\": \"Удостоверение тракториста-машиниста старого образца\",\n",
+    "        \"q6\": \"У вас есть опыт работы водителем погрузчиком?\",\n",
+    "        \"q7\": \"Ваш стаж работы водителем погрузчика\",\n",
+    "        \"q8\": \"Сфера деятельности\",\n",
+    "        \"q9\": \"Названия компаний\",\n",
+    "        \"q10\": \"Какой техникой вы управляете?\",\n",
+    "        \"q11\": \"Максимальная высота поднятия груза\",\n",
+    "        \"q12\": \"С какой системой хранения Вы имели опыт работы?\",\n",
+    "        \"q13\": \"удостоверение стропальщика?\",\n",
+    "        \"q14\": \"Типы работ\",\n",
+    "        \"q15\": \"Возможность провести тест-драйв на собеседовании\",\n",
+    "        \"q16\": \"Ключевые качества\",\n",
+    "        \"q17\": \"Знание языков\",\n",
+    "        \"q19\": \"Хобби\",\n",
+    "        \"q20\": \"Уровень ЗП\",\n",
+    "        \"q21\": \"График работы\",\n",
+    "        \"q22\": \"Ночная смена\",\n",
+    "        \"q23\": \"Командировки\",\n",
+    "        \"q24\": \"Станции метро\"\n",
+    "    },\n",
+    "    \"Официант\":{\n",
+    "        \"q1\": \"Желаемая должность\",\n",
+    "        \"q2\": \"Есть ли у Вас профессиональное образование в сфере гостеприимства?\",\n",
+    "        \"q3\": \"профессиональное образовательное учреждение, где вы учились, и специальность\",\n",
+    "        \"q4\": \"Год окончания обучения\",\n",
+    "        \"q5\": \"Стаж работы официантом\",\n",
+    "        \"q6\": \"Рестораны, где работал\",\n",
+    "        \"q7\": \"дополнительные профессиональные знания и навыки\",\n",
+    "        \"q8\": \"Знание языков\",\n",
+    "        \"q9\": \"C какой посудой работали\",\n",
+    "        \"q10\": \"График работы\"\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_resume = pd.read_csv('./../resume_to_hackaton.csv', sep=';')\n",
     "df_vac = pd.read_csv('./../vacancies_to_hackaton.csv', sep=';')\n",
-    "target_positions = [\"Кладовщик\",  \"Комплектовщик\", \"Официант\"]"
+    "target_positions = list(questions_models.keys())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "uuid                         36c13102-4a62-477b-a475-f9a5b1c48218\nposition                                       Заведующий складом\norganization                                        Оконный завод\ndescription     руководство складом и цехом по производству ко...\nstart                                                     2014-02\nend                                                       2015-09\nName: 1, dtype: object"
-     },
-     "metadata": {},
-     "execution_count": 37
-    }
-   ],
-   "source": [
-    "df_resume.iloc[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "11514"
-     },
-     "metadata": {},
-     "execution_count": 40
-    }
-   ],
-   "source": [
-    "len(df_resume[df_resume['position'] == \"Кладовщик\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "'Обязанности:   Приготовление напитков в баре  Прием и подача заказов по столикам Работа с кассой  Требования:  Желание работать и зарабатывать. Опыт работы на подобной должности будет Вашим преимуществом. А вообще всему научим и всему обучим, так что не нужно бояться приходить без опыта работы). Наличие медицинской книжки будет Вашим преимуществом.  Условия:  График сменный 2\\\\2. Будние дни с 9-00 до 21-00. Выходные дни с 9-00 до 21-00. Оформление по ТК. Оплата: 100 руб/час + % + чаевые '"
-     },
-     "metadata": {},
-     "execution_count": 15
-    }
-   ],
-   "source": [
-    "df_vac['description'][1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "id                                                           17632940\nname                                          Ночной контролер склада\narea.name                                             Санкт-Петербург\ncity                                                   посёлок Шушары\ncompany.id                                                     141100\ncompany                                                            4Ф\ncompany_link                            https://hh.ru/employer/141100\npublication_date                             2016-07-05T10:20:51+0300\nsalary_from                                                     22000\nsalary_currency                                                   RUR\nemployment.name                                      Полная занятость\nschedule.name                                          Сменный график\nexperience.name                                             Нет опыта\nkey_skills                                                        NaN\nspecializations                                   21.563 21.564 8.202\ndescription         Обязанности:  Проверка правильности собранных ...\nName: 5, dtype: object"
-     },
-     "metadata": {},
-     "execution_count": 47
-    }
-   ],
-   "source": [
-    "df_vac.iloc[5]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "['Ответственность',\n 'Материальная ответственность',\n 'Навыки межличностного общения',\n 'Работа в команде',\n 'Грамотная речь']"
-     },
-     "metadata": {},
-     "execution_count": 24
-    }
-   ],
-   "source": [
-    "df_vac[\"key_skills\"][1].split(\" | \")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_target_vac = df_vac[df_vac['name'].isin([\"Кладовщик\",  \"Комплектовщик\", \"Официант\"])]\n",
-    "df_target_resume = df_resume[df_resume['position'].isin([\"Кладовщик\",  \"Комплектовщик\", \"Официант\"])]"
+    "df_target_vac = df_vac[df_vac['name'].isin(target_positions)]\n",
+    "df_target_resume = df_resume[df_resume['position'].isin(target_positions)]"
    ]
   },
   {
@@ -125,14 +119,113 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(df_target_vac.iloc[5]['name'])\n",
+    "print(df_vac.iloc[5]['description'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def preprocess_text(text: str, word_limit: int):\n",
+    "    tokens = mystem.lemmatize(text.lower())\n",
+    "    tokens = [token.split(\" \") for token in tokens]\n",
+    "    tokens = np.concatenate(tokens)\n",
+    "    tokens = [token.strip() for token in tokens if token not in russian_stopwords\\\n",
+    "              and token != \" \" \\\n",
+    "              and token.strip() not in punctuation]\n",
+    "    text = \" \".join(tokens)\n",
+    "    terms = term_extractor(text, limit=word_limit, strings=True)\n",
+    "    \n",
+    "    return terms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def process_text_data(question: str, text: str):\n",
+    "    question_terms = preprocess_text(question, 2) \n",
+    "    text_terms = preprocess_text(text, 20)\n",
+    "    return question_terms, text_terms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_df = pd.DataFrame()\n",
+    "train_data = []\n",
+    "for i, row in df_target_vac.iterrows():\n",
+    "    position = row['name']\n",
+    "    text = row['description']\n",
+    "    if position in questions_models:\n",
+    "        questions_model = questions_models[position]\n",
+    "        for question in list(questions_model.values())[1:]:\n",
+    "            train_data.append({\n",
+    "                \"position\": position,\n",
+    "                \"question\": question,\n",
+    "                \"text\": text\n",
+    "            })"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "        position                                           question  \\\n0       Официант  Есть ли у Вас профессиональное образование в с...   \n1       Официант  профессиональное образовательное учреждение, г...   \n2       Официант                             Год окончания обучения   \n3       Официант                             Стаж работы официантом   \n4       Официант                             Рестораны, где работал   \n...          ...                                                ...   \n80504  Кладовщик                          Опыт работы с программами   \n80505  Кладовщик                             Опыт с инструментарием   \n80506  Кладовщик                                         Типы работ   \n80507  Кладовщик  Сколько времени вы потратили на поиск работы к...   \n80508  Кладовщик                              Уровень ЗП (желаемый)   \n\n                                                    text  \n0      Мы ищем активного, жизнерадостного и дружелюбн...  \n1      Мы ищем активного, жизнерадостного и дружелюбн...  \n2      Мы ищем активного, жизнерадостного и дружелюбн...  \n3      Мы ищем активного, жизнерадостного и дружелюбн...  \n4      Мы ищем активного, жизнерадостного и дружелюбн...  \n...                                                  ...  \n80504  ОАО \"Октябрьский электровагоноремонтный завод\"...  \n80505  ОАО \"Октябрьский электровагоноремонтный завод\"...  \n80506  ОАО \"Октябрьский электровагоноремонтный завод\"...  \n80507  ОАО \"Октябрьский электровагоноремонтный завод\"...  \n80508  ОАО \"Октябрьский электровагоноремонтный завод\"...  \n\n[80509 rows x 3 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>position</th>\n      <th>question</th>\n      <th>text</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Официант</td>\n      <td>Есть ли у Вас профессиональное образование в с...</td>\n      <td>Мы ищем активного, жизнерадостного и дружелюбн...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Официант</td>\n      <td>профессиональное образовательное учреждение, г...</td>\n      <td>Мы ищем активного, жизнерадостного и дружелюбн...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Официант</td>\n      <td>Год окончания обучения</td>\n      <td>Мы ищем активного, жизнерадостного и дружелюбн...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Официант</td>\n      <td>Стаж работы официантом</td>\n      <td>Мы ищем активного, жизнерадостного и дружелюбн...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Официант</td>\n      <td>Рестораны, где работал</td>\n      <td>Мы ищем активного, жизнерадостного и дружелюбн...</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>80504</th>\n      <td>Кладовщик</td>\n      <td>Опыт работы с программами</td>\n      <td>ОАО \"Октябрьский электровагоноремонтный завод\"...</td>\n    </tr>\n    <tr>\n      <th>80505</th>\n      <td>Кладовщик</td>\n      <td>Опыт с инструментарием</td>\n      <td>ОАО \"Октябрьский электровагоноремонтный завод\"...</td>\n    </tr>\n    <tr>\n      <th>80506</th>\n      <td>Кладовщик</td>\n      <td>Типы работ</td>\n      <td>ОАО \"Октябрьский электровагоноремонтный завод\"...</td>\n    </tr>\n    <tr>\n      <th>80507</th>\n      <td>Кладовщик</td>\n      <td>Сколько времени вы потратили на поиск работы к...</td>\n      <td>ОАО \"Октябрьский электровагоноремонтный завод\"...</td>\n    </tr>\n    <tr>\n      <th>80508</th>\n      <td>Кладовщик</td>\n      <td>Уровень ЗП (желаемый)</td>\n      <td>ОАО \"Октябрьский электровагоноремонтный завод\"...</td>\n    </tr>\n  </tbody>\n</table>\n<p>80509 rows × 3 columns</p>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 8
+    }
+   ],
+   "source": [
+    "train_df = pd.DataFrame(train_data)\n",
+    "train_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class BagOfWordCoder:\n",
+    "    vectorizer = None\n",
+    "    __init__(self, path_to_corpus):\n",
+    "        if not path_to_corpus.endswith(\".vec\"):\n",
+    "            raise Exception(f\"Need to be *.vec file\")\n",
+    "        with open(path_to_corpus) as f:\n",
+    "            vectorizer = pickle.load(f)\n",
+    "    \n",
+    "    def vectorize(self, text):\n",
+    "        return vectorizer.transform(text)\n",
+    "    \n",
+    "    def get_text(self, matrix):\n",
+    "        return le.inverse_transform(matrix)\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.5 64-bit ('hacktrud': conda)",
    "language": "python",
-   "name": "python3"
+   "name": "python_defaultSpec_1600527031405"
   },
   "language_info": {
    "codemirror_mode": {
@@ -144,7 +237,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6-final"
+   "version": "3.8.5-final"
   }
  },
  "nbformat": 4,
