--- a/jupyter notes/backend_nb.ipynb
+++ b/jupyter notes/backend_nb.ipynb
@@ -116,12 +116,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "'Встреча и приветствие гостей\\r  Обслуживание гостей кофейни\\r  Консультирование гостей по ассортименту кофейни\\r  Контроль чистоты кофейни: поддержание порядка в зале, подсобных помещениях'"
+     },
+     "metadata": {},
+     "execution_count": 83
+    }
+   ],
+   "source": [
+    "df_target_resume['description'].sample(1).values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Кладовщик\nОбязанности:  Осуществлять работу по приему, хранению и отпуску товарно-материальных ценностей, по их размещению с учетом наиболее рационального использования складских площадей, облегчения и ускорения поиска необходимых материалов, инвентаря и т.п.; Обеспечивать сохранность складируемых товарно-материальных ценностей; Соблюдать правила и порядок хранения и складирования товарно-материальных ценностей; Участвовать в проведении инвентаризаций товарно-материальных ценностей;  Требования:  Опыт работы в должности кладовщика; Знание правил эксплуатации средств вычислительной техники, коммуникаций и связи; Знание складского документооборота; Опыт работы в складских ИТ-системах, знание Excel; Уверенный пользователь ПК.  Условия:  Оформление согласно ТК РФ; 5-ти дневная рабочая неделя; Работа в теплом складе на территории Полиграфической компании \"Конфлекс-СПБ\". \n"
+    }
+   ],
    "source": [
     "print(df_target_vac.iloc[5]['name'])\n",
-    "print(df_vac.iloc[5]['description'])"
+    "print(df_target_vac.iloc[5]['description'])"
    ]
   },
   {
@@ -200,16 +226,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "'Обязанности:  Организация проведения отпуска товарно-материальных ценностей, осуществление подготовки товара к отгрузке (проверка факта оплаты товара, оформление необходимой документации, проверка целостности комплектации и товарного вида, демонстрация клиенту, доставка товара до автомобиля клиента). Проверка состояния, внешнего вида (целостности упаковки); Обеспечение надежной упаковки товара, предназначенного к отгрузке с сопровождением копиями отгрузочных документов; Участие в погрузо-разгрузочных работах; Участие в проведении инвентаризаций товарно-материальных ценностей.  Требования:  Опыт работы на аналогичной должности; Пользователь ПК: Word, Excel; Внимательность, ответственность.  Условия:  График работы: 5/2, 9-19, 10-20; Испытательный срок-1 месяц; Трудоустройство по ТК РФ, соц.пакет; Место работы ст.м. Электросила; Возможность карьерного роста; Молодой, дружный коллектив; Полный рабочий день, на территории работодателя. '"
+     },
+     "metadata": {},
+     "execution_count": 46
+    }
+   ],
+   "source": [
+    "train_df.sample(1)['text'].values[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
+    "def generate_target(position, question, text):\n",
+    "    question_words = preprocess_text(question, 2)\n",
+    "    print(question_words)\n",
+    "    target = []\n",
+    "    for word in question_words:\n",
+    "        start = text.find(word) + len(word)\n",
+    "        i = start\n",
+    "        print(i)\n",
+    "        while not text[i] in punctuation and i < len(text):\n",
+    "            i += 1\n",
+    "        target.append(text[start:i])\n",
+    "        i = start\n",
+    "        while not text[i] in punctuation and i > 0:\n",
+    "            i -= 1\n",
+    "        target.append(text[start-1:i])\n",
+    "    return target"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "['профессиональный образование', 'сфера']\n27\n4\n"
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "['остного и дружелюбного официанта', '', 'щем активного', '']"
+     },
+     "metadata": {},
+     "execution_count": 82
+    }
+   ],
+   "source": [
+    "generate_target(train_data[0]['position'], train_data[0]['question'], train_data[0]['text'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
     "class BagOfWordCoder:\n",
     "    vectorizer = None\n",
-    "    __init__(self, path_to_corpus):\n",
+    "    def __init__(self, path_to_corpus):\n",
     "        if not path_to_corpus.endswith(\".vec\"):\n",
     "            raise Exception(f\"Need to be *.vec file\")\n",
-    "        with open(path_to_corpus) as f:\n",
+    "        with open(path_to_corpus, 'rb') as f:\n",
     "            vectorizer = pickle.load(f)\n",
     "    \n",
     "    def vectorize(self, text):\n",
@@ -219,6 +313,38 @@
     "        return le.inverse_transform(matrix)\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vectoriser = BagOfWordCoder('vectorizer.vec')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "<__main__.BagOfWordCoder at 0x7fcd8e655f70>"
+     },
+     "metadata": {},
+     "execution_count": 54
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
