--- a/jupyter notes/parser.ipynb
+++ b/jupyter notes/parser.ipynb
@@ -14,8 +14,8 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1600540936919",
-   "display_name": "Python 3.8.5 64-bit ('hacktrud': conda)"
+   "name": "python_defaultSpec_1600553439088",
+   "display_name": "Python 3.8.5 64-bit ('venv': venv)"
   }
  },
  "nbformat": 4,
@@ -23,81 +23,157 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.firefox.options import Options\n",
     "from bs4 import BeautifulSoup\n",
-    "base_url = \"https://spb.hh.ru/resume/\""
+    "from string import printable\n",
+    "import unicodedata\n",
+    "\n",
+    "\n",
+    "\n",
+    "base_url = \"https://spb.hh.ru/resume/\"\n",
+    "\n",
+    "headers = {'User-Agent': 'Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/85.0.4183.83 Safari/537.36'}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def salary(soup):\n",
-    "    block = soup.find_next('div', {'class': 'bloko-gap bloko-gap_top'})\n",
-    "    block.find_next('span', {'class':'resume-block__salary resume-block__title-text_salary', \"data-qa\":\"resume-block-salary\"})"
+    "options = Options()\n",
+    "options.headless = True\n",
+    "driver = webdriver.Firefox(options=options)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 203,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def salary(content):\n",
+    "    soup = BeautifulSoup(content)\n",
+    "    text = soup.find('span', \n",
+    "        {\n",
+    "            'class':'resume-block__salary resume-block__title-text_salary',                    \"data-qa\":\"resume-block-salary\"\n",
+    "        }).text\n",
+    "    text = unicodedata.normalize('NFKD', text)\n",
+    "    salary_list = [char for char in text if char.isdigit()]\n",
+    "    return int(''.join(salary_list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 219,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def work_exp(content):\n",
+    "    soup = BeautifulSoup(content)\n",
+    "    text = soup.find('span', {\n",
+    "            'class':'resume-block__title-text resume-block__title-text_sub'\n",
+    "        }).text\n",
+    "    \n",
+    "    text = unicodedata.normalize('NFKD', text)\n",
+    "    return text.replace('Опыт работы ', '')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 236,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def drive_exp(content):\n",
+    "    soup = BeautifulSoup(content)\n",
+    "    div = soup.find_all('div', {\n",
+    "            'data-qa':'resume-block-driver-experience'\n",
+    "        })[0]\n",
+    "    text = div.find_all('div', {'class': 'resume-block-item-gap'})[0].text\n",
+    "    text = unicodedata.normalize('NFKD', text)\n",
+    "    return text.replace('Опыт работы ', '')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 240,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def education(content):\n",
+    "    soup = BeautifulSoup(content)\n",
+    "    div = soup.find_all('div', {\n",
+    "            'data-qa':'resume-block-education'\n",
+    "        })[0]\n",
+    "    text = div.find_all('div', {'class': 'resume-block-item-gap'})[0].text\n",
+    "    text = unicodedata.normalize('NFKD', text)\n",
+    "    return text.replace('Опыт работы ', '')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 242,
    "metadata": {},
    "outputs": [],
    "source": [
     "term_parser = {\n",
-    "    'зарплата': salary\n",
+    "    'зарплата': salary,\n",
+    "    'зп': salary,\n",
+    "    'опыт работы': work_exp,\n",
+    "    'опыт вождения': drive_exp,\n",
+    "    'образование': education\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [],
    "source": [
     "def parser(question_terms, uid):\n",
-    "    content = requests.get(base_url + uid, headers={'User-Agent': 'Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/85.0.4183.83 Safari/537.36'}).content\n",
-    "    print(base_url+uid)\n",
-    "    print(content)\n",
-    "    soup = BeautifulSoup(content)\n",
+    "    #content = download.resume(uid)\n",
+    "    driver.get(base_url + uid)\n",
+    "    content = driver.page_source\n",
+    "    output = {}\n",
     "    for name in question_terms:\n",
-    "        return term_parser['зарплата'](soup)"
+    "        output[name] = term_parser[name](content)\n",
+    "    return output"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 244,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "https://spb.hh.ru/resume/fc6280cb00051725840039ed1f574c52506830\nb'<html>\\r\\n<head><title>404 Not Found</title></head>\\r\\n<body>\\r\\n<center><h1>404 Not Found</h1></center>\\r\\n<hr><center>nginx</center>\\r\\n</body>\\r\\n</html>\\r\\n'\n"
-    },
-    {
-     "output_type": "error",
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'find_next'",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-16-02320ef11af4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mparser\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'зарплата'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'fc6280cb00051725840039ed1f574c52506830'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-15-11644750e845>\u001b[0m in \u001b[0;36mparser\u001b[0;34m(question_terms, uid)\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0msoup\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mBeautifulSoup\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcontent\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mname\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mquestion_terms\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mterm_parser\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'зарплата'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msoup\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-4-7c3ee81ee2f7>\u001b[0m in \u001b[0;36msalary\u001b[0;34m(soup)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0msalary\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msoup\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mblock\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msoup\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind_next\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'div'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m'class'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'bloko-gap bloko-gap_top'\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mblock\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind_next\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'span'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m'class'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m'resume-block__salary resume-block__title-text_salary'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"data-qa\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\"resume-block-salary\"\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'find_next'"
-     ]
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "{'зарплата': 40000,\n 'опыт работы': '9 месяцев',\n 'опыт вождения': 'Права категории B',\n 'образование': 'Среднее образование'}"
+     },
+     "metadata": {},
+     "execution_count": 244
     }
    ],
    "source": [
-    "parser('зарплата', 'fc6280cb00051725840039ed1f574c52506830')"
+    "parser(['зарплата', 'опыт работы', 'опыт вождения', 'образование'], 'fc6280cb00051725840039ed1f574c52506830')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
