--- a/jupyter notes/parser.ipynb
+++ b/jupyter notes/parser.ipynb
@@ -14,7 +14,7 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1600553439088",
+   "name": "python_defaultSpec_1600580786358",
    "display_name": "Python 3.8.5 64-bit ('venv': venv)"
   }
  },
@@ -23,17 +23,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
     "from selenium import webdriver\n",
-    "from selenium.webdriver.firefox.options import Options\n",
+    "\n",
     "from bs4 import BeautifulSoup\n",
     "from string import printable\n",
     "import unicodedata\n",
+    "from selenium.webdriver.common.desired_capabilities import DesiredCapabilities\n",
     "\n",
+    "import re\n",
     "\n",
     "\n",
     "base_url = \"https://spb.hh.ru/resume/\"\n",
@@ -43,18 +45,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "SessionNotCreatedException",
+     "evalue": "Message: Unable to find a matching set of capabilities\n",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mSessionNotCreatedException\u001b[0m                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-5a08baac1e40>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0moptions\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mOptions\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0moptions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_argument\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"--headless\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mdriver\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mwebdriver\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mFirefox\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moptions\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0moptions\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcapabilities\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcap\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/anaconda3/envs/hacktrud/lib/python3.8/site-packages/selenium/webdriver/firefox/webdriver.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, firefox_profile, firefox_binary, timeout, capabilities, proxy, executable_path, options, service_log_path, firefox_options, service_args, desired_capabilities, log_path, keep_alive)\u001b[0m\n\u001b[1;32m    168\u001b[0m             executor = FirefoxRemoteConnection(\n\u001b[1;32m    169\u001b[0m                 remote_server_addr=self.service.service_url)\n\u001b[0;32m--> 170\u001b[0;31m             RemoteWebDriver.__init__(\n\u001b[0m\u001b[1;32m    171\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    172\u001b[0m                 \u001b[0mcommand_executor\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mexecutor\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/hacktrud/lib/python3.8/site-packages/selenium/webdriver/remote/webdriver.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, command_executor, desired_capabilities, browser_profile, proxy, keep_alive, file_detector, options)\u001b[0m\n\u001b[1;32m    155\u001b[0m             warnings.warn(\"Please use FirefoxOptions to set browser profile\",\n\u001b[1;32m    156\u001b[0m                           DeprecationWarning, stacklevel=2)\n\u001b[0;32m--> 157\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstart_session\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcapabilities\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbrowser_profile\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    158\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_switch_to\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSwitchTo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    159\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_mobile\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mMobile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/hacktrud/lib/python3.8/site-packages/selenium/webdriver/remote/webdriver.py\u001b[0m in \u001b[0;36mstart_session\u001b[0;34m(self, capabilities, browser_profile)\u001b[0m\n\u001b[1;32m    250\u001b[0m         parameters = {\"capabilities\": w3c_caps,\n\u001b[1;32m    251\u001b[0m                       \"desiredCapabilities\": capabilities}\n\u001b[0;32m--> 252\u001b[0;31m         \u001b[0mresponse\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mCommand\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mNEW_SESSION\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparameters\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    253\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;34m'sessionId'\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mresponse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    254\u001b[0m             \u001b[0mresponse\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mresponse\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'value'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/hacktrud/lib/python3.8/site-packages/selenium/webdriver/remote/webdriver.py\u001b[0m in \u001b[0;36mexecute\u001b[0;34m(self, driver_command, params)\u001b[0m\n\u001b[1;32m    319\u001b[0m         \u001b[0mresponse\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcommand_executor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdriver_command\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    320\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mresponse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 321\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0merror_handler\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcheck_response\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresponse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    322\u001b[0m             response['value'] = self._unwrap_value(\n\u001b[1;32m    323\u001b[0m                 response.get('value', None))\n",
+      "\u001b[0;32m~/anaconda3/envs/hacktrud/lib/python3.8/site-packages/selenium/webdriver/remote/errorhandler.py\u001b[0m in \u001b[0;36mcheck_response\u001b[0;34m(self, response)\u001b[0m\n\u001b[1;32m    240\u001b[0m                 \u001b[0malert_text\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'alert'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'text'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    241\u001b[0m             \u001b[0;32mraise\u001b[0m \u001b[0mexception_class\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmessage\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mscreen\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstacktrace\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0malert_text\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 242\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mexception_class\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmessage\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mscreen\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstacktrace\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    243\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    244\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_value_or_default\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mobj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdefault\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mSessionNotCreatedException\u001b[0m: Message: Unable to find a matching set of capabilities\n"
+     ]
+    }
+   ],
    "source": [
+    "from selenium.webdriver.firefox.options import Options\n",
     "options = Options()\n",
-    "options.headless = True\n",
+    "options.add_argument(\"--headless\")\n",
     "driver = webdriver.Firefox(options=options)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 15,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": "[WDM] - Current google-chrome version is 85.0.4183\n[WDM] - Get LATEST driver version for 85.0.4183\n[WDM] - Driver [/home/royalcat/.wdm/drivers/chromedriver/linux64/85.0.4183.87/chromedriver] found in cache\n \n"
+    }
+   ],
+   "source": [
+    "from selenium.webdriver.chrome.options import Options\n",
+    "from webdriver_manager.chrome import ChromeDriverManager\n",
+    "\n",
+    "options = Options()\n",
+    "options.headless = True\n",
+    "\n",
+    "driver = webdriver.Chrome(ChromeDriverManager().install())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,12 +125,12 @@
     "        }).text\n",
     "    \n",
     "    text = unicodedata.normalize('NFKD', text)\n",
-    "    return text.replace('Опыт работы ', '')"
+    "    return text.replace('Опыт работы', '').strip()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,12 +141,12 @@
     "        })[0]\n",
     "    text = div.find_all('div', {'class': 'resume-block-item-gap'})[0].text\n",
     "    text = unicodedata.normalize('NFKD', text)\n",
-    "    return text.replace('Опыт работы ', '')"
+    "    return text.strip()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,12 +157,48 @@
     "        })[0]\n",
     "    text = div.find_all('div', {'class': 'resume-block-item-gap'})[0].text\n",
     "    text = unicodedata.normalize('NFKD', text)\n",
-    "    return text.replace('Опыт работы ', '')"
+    "    return text.strip()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def employment(content):\n",
+    "    soup = BeautifulSoup(content)\n",
+    "    div = soup.find_all('div', {\n",
+    "            'data-qa':'resume-block-position',\n",
+    "            'class': 'resume-block',\n",
+    "        })[0]\n",
+    "    text = div.find_all('div', {'class': 'resume-block-item-gap'})[0].div.div.p.text\n",
+    "    text = unicodedata.normalize('NFKD', text)\n",
+    "    \n",
+    "    return text.replace('Занятость:', '').strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def schedule(content):\n",
+    "    soup = BeautifulSoup(content)\n",
+    "    div = soup.find_all('div', {\n",
+    "            'data-qa':'resume-block-position',\n",
+    "            'class': 'resume-block',\n",
+    "        })[0]\n",
+    "    text = div.find_all('div', {'class': 'resume-block-item-gap'})[0].div.div.find_all('p')[1].text\n",
+    "    text = unicodedata.normalize('NFKD', text)\n",
+    "    \n",
+    "    return text.replace('График работы:', '').strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,13 +207,15 @@
     "    'зп': salary,\n",
     "    'опыт работы': work_exp,\n",
     "    'опыт вождения': drive_exp,\n",
-    "    'образование': education\n",
+    "    'образование': education,\n",
+    "    'занятость': employment,\n",
+    "    'график': schedule\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,13 +225,16 @@
     "    content = driver.page_source\n",
     "    output = {}\n",
     "    for name in question_terms:\n",
-    "        output[name] = term_parser[name](content)\n",
+    "        name_term = term_parser[name](content)\n",
+    "        if type(name_term) is str:\n",
+    "            name_term = name_term.lower()\n",
+    "        output[name] = name_term\n",
     "    return output"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 77,
    "metadata": {
     "tags": []
    },
@@ -158,14 +242,14 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "{'зарплата': 40000,\n 'опыт работы': '9 месяцев',\n 'опыт вождения': 'Права категории B',\n 'образование': 'Среднее образование'}"
+      "text/plain": "{'зарплата': 40000,\n 'опыт работы': '9 месяцев',\n 'опыт вождения': 'права категории b',\n 'образование': 'среднее образование',\n 'занятость': 'полная занятость',\n 'график': 'полный день'}"
      },
      "metadata": {},
-     "execution_count": 244
+     "execution_count": 77
     }
    ],
    "source": [
-    "parser(['зарплата', 'опыт работы', 'опыт вождения', 'образование'], 'fc6280cb00051725840039ed1f574c52506830')"
+    "parser(['зарплата', 'опыт работы', 'опыт вождения', 'образование', 'занятость', 'график'], 'fc6280cb00051725840039ed1f574c52506830')"
    ]
   },
   {
